# SMC-SYSTEMS

./: .env.example  .gitignore  LEGACY_AUDIT_REPORT.md  PROJECT_OVERVIEW.md  README.md  opencode.json  requirements.txt  run_system.py  session-ses_0ef2.md
SMC_SUCCESSOR/: COMPLETION_REPORT.md  MT5_INTEGRATION_REPORT.md  README.md  _build_v4.py  _check_data.py  _check_mt5.py  _dataset_report.py  _debug_wf.py  _dl_usdchf.py  _download_missing.py  _download_mtf.py  _train_v4.py  _validate_v4.py  download_candles.py  pyproject.toml
SMC_SUCCESSOR/data/raw/: AUDUSD_D1.parquet  AUDUSD_H4.parquet  AUDUSD_M15.parquet  (+22 more)
SMC_SUCCESSOR/docs/: AGENT_ARCHITECTURE.md  AGENT_COMPLETION_PROTOCOL.md  ICT_RULEBOOK.md  ML_DATASET_SPEC.md  MULTI_SYMBOL_ML_AUDIT.md  TRADING_MODEL_SPEC.md  WYCKOFF_RULEBOOK.md
SMC_SUCCESSOR/harness/: README.md  __init__.py  __main__.py  contracts.py
SMC_SUCCESSOR/ml/: feature_importance.csv  model_metrics.json
SMC_SUCCESSOR/models/: quality_filter.json  quality_filter.pkl
SMC_SUCCESSOR/results/: equity_curve.csv  metrics.json  ml_dataset_quality_log.json  ml_trade_dataset.csv  status.json  trades.csv
SMC_SUCCESSOR/scripts/: audit_problems.py
SMC_SUCCESSOR/smc_successor/: _data_legacy.py  _progress.py  indicators.py  trend_context.py
SMC_SUCCESSOR/tests/: __init__.py  test_agents.py  test_backtest_engine.py  test_e2e_backtest.py  test_feature_engine.py  test_harness_integration.py  test_harness_smoke.py  test_ml_dataset.py  test_ml_train.py  test_ml_trainer.py  test_pipeline_integration.py  test_risk_governor.py  test_signal_pipeline.py
(+469 files in other folders)
