[project]
name = "smc-successor"
version = "0.1.0"
description = "Harness-first modular trading research and execution platform."
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0",
  "pandas>=2.0",
  "numpy>=1.24",
  "joblib>=1.2",
  "scikit-learn>=1.3",
]

[tool.pytest.ini_options]
testpaths = ["tests", "harness"]
pythonpath = ["."]
asyncio_default_fixture_loop_scope = "function"
